[workspace]
members = ["crates/*", "delta-inspect", "python"]
exclude = ["proofs"]
resolver = "2"

[workspace.package]
authors = ["Qingping Hou <dave2008713@gmail.com>"]
rust-version = "1.86"
keywords = ["deltalake", "delta", "datalake"]
readme = "README.md"
edition = "2021"
description = "Native Delta Lake implementation in Rust"
homepage = "https://github.com/delta-io/delta.rs"
license = "Apache-2.0"
documentation = "https://docs.rs/deltalake"
repository = "https://github.com/delta-io/delta.rs"

# Reducing the debuginfo for the test profile in order to trim the disk and RAM
# usage during development
# <https://github.com/delta-io/delta-rs/issues/1550?
[profile.test]
debug = "line-tables-only"

[workspace.dependencies]
delta_kernel = { version = "0.16.0", features = [
    "arrow-57",
    "default-engine-rustls",
    "internal-api",
] }


# arrow
arrow = { version = "57" }
arrow-arith = { version = "57" }
arrow-array = { version = "57", features = ["chrono-tz"] }
arrow-buffer = { version = "57" }
arrow-cast = { version = "57" }
arrow-ipc = { version = "57" }
arrow-json = { version = "57" }
arrow-ord = { version = "57" }
arrow-row = { version = "57" }
arrow-schema = { version = "57" }
arrow-select = { version = "57" }
object_store = { version = "0.12.1" }
parquet = { version = "57" }

# datafusion
datafusion = "50.2"
datafusion-ffi = "50.2"
datafusion-proto = "50.2"

# serde
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1"
strum = { version = "0.27" }

# "stdlib"
bytes = { version = "1" }
chrono = { version = "0.4.40", default-features = false, features = ["clock"] }
tracing = { version = "0.1", features = ["log"] }
regex = { version = "1" }
thiserror = { version = "2" }
url = { version = "2" }
percent-encoding-rfc3986 = { version = "0.1.3" }
tempfile = { version = "3" }
uuid = { version = "1" }

# runtime / async
async-trait = { version = "0.1" }
futures = { version = "0.3" }
tokio = { version = "1" }
typed-builder = { version = "0.23.0" }

# opentelemetry
tracing-opentelemetry = { version = "0.32" }
opentelemetry = { version = "0.31" }
opentelemetry-otlp = { version = "0.31", features = ["http-proto"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
num_cpus = { version = "1" }

[workspace.metadata.typos]
files.extend-exclude = ["CHANGELOG.md", "crates/benchmarks/queries/tpcds/*.sql"]
default.extend-ignore-re = [
    # Custom ignore regex patterns: https://github.com/crate-ci/typos/blob/master/docs/reference.md#example-configurations
    "(?s)//\\s*spellchecker:ignore-next-line[^\\n]*\\n[^\\n]*",
    # Line block with # spellchecker:<on|off>
    "(?s)(#|//|<\\!--)\\s*spellchecker:off.*?\\n\\s*(#|//|<\\!--)\\s*spellchecker:on",
    "(?Rm)^.*(#|//)\\s*spellchecker:disable-line$",
    # workaround for: https://github.com/crate-ci/typos/issues/850
    "[0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{4}-[0-9a-fA-F]{12}",
]

[workspace.metadata.typos.default.extend-words]
arro = "arro"
Arro = "Arro"
arro3 = "arro3"
Arro3 = "Arro3"
AKS = "AKS"
# to avoid using 'type' as a field name.
tpe = "tpe"

[profile.release-with-debug]
inherits = "release"
debug = true

# for better flamegraphs when benchmarking
[profile.bench]
debug = true

[profile.profiling]
inherits = "release"
debug = true

[profile.release-python]
inherits = "release"
opt-level = 3
codegen-units = 1
lto = "fat"



[patch.crates-io]
# pin to pre-release DataFusion 51
datafusion = { git = "https://github.com/apache/datafusion.git", rev = "a5eb9121ccf802dda547897155403b08a4fbf774" }
datafusion-expr = { git = "https://github.com/apache/datafusion.git", rev = "a5eb9121ccf802dda547897155403b08a4fbf774"  }
datafusion-common = { git = "https://github.com/apache/datafusion.git", rev = "a5eb9121ccf802dda547897155403b08a4fbf774"  }
datafusion-ffi = { git = "https://github.com/apache/datafusion.git", rev = "a5eb9121ccf802dda547897155403b08a4fbf774"  }
datafusion-functions = { git = "https://github.com/apache/datafusion.git", rev = "a5eb9121ccf802dda547897155403b08a4fbf774"  }
datafusion-functions-aggregate = {git = "https://github.com/apache/datafusion.git", rev = "a5eb9121ccf802dda547897155403b08a4fbf774"  }
datafusion-physical-expr = { git = "https://github.com/apache/datafusion.git", rev = "a5eb9121ccf802dda547897155403b08a4fbf774" }
datafusion-physical-plan = { git = "https://github.com/apache/datafusion.git", rev = "a5eb9121ccf802dda547897155403b08a4fbf774" }
datafusion-proto = { git = "https://github.com/apache/datafusion.git", rev = "a5eb9121ccf802dda547897155403b08a4fbf774"  }
datafusion-sql = { git = "https://github.com/apache/datafusion.git", rev = "a5eb9121ccf802dda547897155403b08a4fbf774"  }

# get the latest delta-kernel (to get arrow-57 support)
# https://github.com/delta-io/delta-kernel-rs/pull/1424
delta_kernel = { git = "https://github.com/delta-io/delta-kernel-rs.git", rev = "1a58987df6e55785350ad20ba876ef5467b6e20b"  }


# datafusion
# datafusion = { path = "/Users/andrewlamb/Software/datafusion2/datafusion/core" }
# datafusion-expr = { path = "/Users/andrewlamb/Software/datafusion2/datafusion/expr"  }
# datafusion-common = { path = "/Users/andrewlamb/Software/datafusion2/datafusion/common"  }
# datafusion-ffi = { path = "/Users/andrewlamb/Software/datafusion2/datafusion/ffi"  }
# datafusion-functions = { path = "/Users/andrewlamb/Software/datafusion2/datafusion/functions"  }
# datafusion-functions-aggregate = { path = "/Users/andrewlamb/Software/datafusion2/datafusion/functions-aggregate"  }
# datafusion-physical-expr = { path = "/Users/andrewlamb/Software/datafusion2/datafusion/physical-expr"  }
# datafusion-physical-plan = { path = "/Users/andrewlamb/Software/datafusion2/datafusion/physical-plan"  }
# datafusion-proto = { path = "/Users/andrewlamb/Software/datafusion2/datafusion/proto"  }
# datafusion-sql = { path = "/Users/andrewlamb/Software/datafusion2/datafusion/sql"  }
