[package]
name = "deltalake_adbc"
version = "0.1.0"
edition = "2021"

[lib]
name = "adbc_driver_deltalake"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
arrow = { version = "22", features = ["ffi"] }
thiserror = "1"

[dependencies.deltalake]
path = "../rust"
version = "0"
features = ["s3", "azure", "glue", "gcs", "datafusion-ext"]