[package]
name = "deltalake"
version = "0.5.0"
rust-version = "1.64"
authors = ["Qingping Hou <dave2008713@gmail.com>"]
homepage = "https://github.com/delta-io/delta.rs"
license = "Apache-2.0"
keywords = ["deltalake", "delta", "datalake"]
description = "Native Delta Lake implementation in Rust"
edition = "2021"

[dependencies]
arrow = { version = "26", optional = true }
async-trait = "0.1"
bytes = "1"
chrono = "0.4.22"
cfg-if = "1"
errno = "0.2"
futures = "0.3"
lazy_static = "1"
log = "0"
libc = ">=0.2.90, <1"
num-bigint = "0.4"
num-traits = "0.2.15"
object_store = "0.5.1"
once_cell = "1.16.0"
parking_lot = "0.12"
parquet = { version = "26", features = ["async"], optional = true }
parquet2 = { version = "0.17", optional = true }
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt", "parking_lot"] }
regex = "1"
uuid = { version = "1", features = ["serde", "v4"] }
url = "2.3"

# S3 lock client
rusoto_core = { version = "0.48", default-features = false, optional = true }
rusoto_credential = { version = "0.48", optional = true }
rusoto_sts = { version = "0.48", default-features = false, optional = true }
rusoto_dynamodb = { version = "0.48", default-features = false, optional = true }

# Glue
rusoto_glue = { version = "0.48", default-features = false, optional = true }

# Datafusion
datafusion = { version = "14", optional = true }
datafusion-expr = { version = "14", optional = true }
datafusion-common = { version = "14", optional = true }
datafusion-proto = { version = "14", optional = true }

# NOTE dependencies only for integration tests
fs_extra = { version = "1.2.0", optional = true }
tempdir = { version = "0", optional = true }

[dependencies.dynamodb_lock]
path = "../dynamodb_lock"
version = "0"
default-features = false
optional = true

[dev-dependencies]
criterion = "0"
dotenvy = "0"
maplit = "1"
pretty_assertions = "1.2.1"
rand = "0.8"
serial_test = "0"
tempdir = "0"
tempfile = "3"
utime = "0.3"

[build-dependencies]
glibc_version = { path = "../glibc_version", version = "0.1" }

[features]
default = ["arrow", "parquet"]
datafusion-ext = [
    "datafusion",
    "datafusion-expr",
    "datafusion-common",
    "datafusion-proto",
    "arrow",
    "parquet",
]
azure = ["object_store/azure"]
gcs = ["object_store/gcp"]
s3 = [
    "rusoto_core/native-tls",
    "rusoto_credential",
    "rusoto_sts/native-tls",
    "rusoto_dynamodb/native-tls",
    "dynamodb_lock/native-tls",
    "object_store/aws",
]
s3-rustls = [
    "rusoto_core/rustls",
    "rusoto_credential",
    "rusoto_sts/rustls",
    "rusoto_dynamodb/rustls",
    "dynamodb_lock/rustls",
    "object_store/aws",
]
glue = ["s3", "rusoto_glue"]
python = ["arrow/pyarrow"]
# used only for integration testing
integration_test = ["fs_extra", "tempdir"]

[[bench]]
name = "read_checkpoint"
harness = false

[[example]]
name = "basic_operations"
required-features = ["datafusion-ext"]
